Redid compilers and added java modules